*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -9,8 +9,6 @@ For current core applications included in Openmoko see [[Current Applications]].
 
 Although [[Openmoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
-{{note| Applications listed on this page are listing in order of priority and by phase. Phase 0 is for the developers preview release in March, phase 1 is early July. Phase 2 is GTA02, not ready yet.}}
-
 == General Principles ==
 
 * All modifications are saved instantaneously, there should never be a save command.
@@ -33,98 +31,18 @@ Although [[Openmoko]] is designed for smartphones that use a stylus, it would be
 
 * Reduce at the minimum the need for unused space: borders, intra-widgets distance.
 
-{{note|Innovation usually happens at the bottom. What we need to do is provide consistent ways to develop and deploy applications.}}
-
-==Finger-Based Applications ==
-
-([[Sample Native-Finger Application|template]] for new native-finger applications)
-
 === 2007.2 Applications ===
 These applications use the second generation interface:
 
 * [[Contacts/2007.2|Contacts]]
 * [[Today/2007.2|Today]]
 * [[Dialer/2007.2|Dialer]]
-
 * [[Display_Locker|Display Locker]]
 
 === 2007 Applications ===
-These applications use the first generation interface:
+These applications use the first generation interface: <br>
+see [[Om 2007.1 apps]]
 
-==== 0th Phase ====
-* [[Dialer]]
-* [[Main Menu]]
-
-==== 1st Phase ====
-* [[Music Player]]
-* [[Screen Saver]]
-* [[Dialer]] with [[Least Cost Routing]] for international calling
-* [[Headset Emulator]]
-
-==== 2nd Phase ====
-* [[Clocks]]
-* [[GPS Navigation]]
-* [[Calculator]]
-* [[Unit Converter]]
-* [[Game]]
-* [[Guitar Tuning]]
-* [[Code Memo]]
-* [[Video Player]]
-
-==Stylus-Based Applications ==
-
-([[Sample Native-Stylus Application|template]] for new native-stylus applications)
-
-=== 0th Phase ===
-* [[Top Panel]]
-* [[Footer]] with embedded [[History|Task Manager]]
-* [[Contacts]]
-* [[Calendar]]
-
-=== 1st Phase ===
-* [[Messages]]
-* [[Today]]
-* [[Feed Reader]]
-* [[Preferences]]
-* [[Help Viewer]]
-
-=== 2nd Phase ===
-* [[Search]]
-* [[Media Player]]
-* [[Sketchbook]]
-* [[Picture Viewer]]
-* [[File Browser]]
-* [[Terminal]]
-* [[IM]]
-* [[Web Browser]]
-* [[Reader]]
-* [[Optical Character Recognition]]
-* [[Barcode Recognition]]
-* [[File Converter]]
-* [[System Info]]
-* [[Backup]]
-* [[Bug Report]]
-
-== Panel Applications ==
-
-Panel Applications are individual executables residing in the [[Top Panel]]. They usually indicate their status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
-
-([[Sample Panel Application|template]] for new panel applications)
-
-=== 0th Phase ===
-* [[GSM & GPRS Connection Status]]
-* [[Battery Monitor]]
-* [[Clock]]
-
-=== 1st Phase ===
-* [[GPS Connection Status]]
-* [[Bluetooth Connection Status]]
-* [[USB Connection Status]]
-
-=== 2nd Phase ===
-* [[Search]]
-* [[IM Presence]]
-* [[Screen Grabber]]
 
 [[Category:Applications| ]]
 [[Category:Openmoko]]
