/* If you are not sure it is a bug or not, please leave a message below: */

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -26,7 +26,7 @@ If you want to ask some question, you can send a mail to our [http://lists.openm
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="3" border="1" 
 ! Short Description !! Milestone !! Date !! your name/email
 |-
-|(the problem you found but not sure if ti is a bug) || Om2008.8 || Aug. 12 || (wendy_hung@openmoko.com)
+|(the problem you found but not sure if ti is a bug) || Om2008.8 || Aug. 12 || (wendy_hung@openmoko.com)|
 
 = Hardware =
 [[GSM 900 RF Test Cases]]<br>
