/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -79,7 +79,7 @@ These end up in mixed content. They could be removed and content migrated to mor
 !Yes votes
 !No votes
 |-
-| [[ChangeLog]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+| [[ChangeLog]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]] || [[User:Dolfje]]: I've changed it
 |-
 | [[Neo1973_AUX_Button]] || Getting started includes this info for GTA02 || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
