--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -1,3 +1,5 @@
+{{Languages|Debian}}
+
 [[Image:Debian.png|thumb|480px|''Debian on neo1973'']]
 This page is to explain how to run Debian armel port on Openmoko devices.  You can do this from scratch, or download a prebuilt file system.
 The former will take some time, perhaps 2 hours, depending on your internet connection
