link no longer working

--- a/Navit.mw
+++ b/Navit.mw
@@ -22,7 +22,7 @@ Thanks to [[User:Alessandro | Alessandro]], stefan_schmidt, cp15 and all Navit d
 I got navit set up and configured to the point where it follows me on the map.  It doesn't have street names or any other information, just the map and the cursor showing the location and direction.  Here's what I did:
 * Install navit ipkg on NEO
 ** Build using a local environment: make build-package-navit
-** Download from [[User:Alessandro]] repo (http://aiurlano.netsons.org/OpenMoko/ipk/armv4t/)
+** <s>Download from [[User:Alessandro]] repo (http://aiurlano.netsons.org/OpenMoko/ipk/armv4t/)</s>
 * Set up your local maps
 ** Openstreetmap - follow directions at http://wiki.navit-project.org/index.php/OpenStreetMaps
 ** Here's an example of what I did to get the maps for the area around Seattle, Wa where I live:
