*Empty MediaWiki Message*

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -8,15 +8,15 @@ It's all the bugs that the testing team reported, by using all images including 
 '''
 
 Here are some major bugs that been found before Om 2008.8 release, <br>
-- [#1760] Out going call can not really disconnect by "End Call" if the other one did not pick up the call.<br>
+- [[http://docs.openmoko.org/trac/ticket/1760 #1760][ Out going call can not really disconnect by "End Call" if the other one did not pick up the call.<br>
 - Some of the testing phone can not make phone calls but can receive/send SMS??? (With alert message"no network")<br>
-- [#1691] qpe crashed all the time in one of our testing phone.<br>
+- [[http://docs.openmoko.org/trac/ticket/1691 #1691]] qpe crashed all the time in one of our testing phone.<br>
 - Two of our phone can not wake up from suspend time, and we're still tracking it.<br>
-- [#1734] WiFi can not work (show up "unknown" all the time) <br>
-- [#1736] some boot time issue <br>
-- [#1722] Can't take GSM signal right away after on the device <br>
-- [#1661] Unable to send saved tags by entering number (Locations) <br>
-- [#1635] After x hours the call active will become unstable. Can't receive or make a phone call normally. <br>
+- [http://docs.openmoko.org/trac/ticket/1734 #1734]] WiFi can not work (show up "unknown" all the time) <br>
+- [[http://docs.openmoko.org/trac/ticket/1736 #1736]]some boot time issue <br>
+- [[http://docs.openmoko.org/trac/ticket/1722 #1722]] Can't take GSM signal right away after on the device <br>
+- [[http://docs.openmoko.org/trac/ticket/1661 #1661]] Unable to send saved tags by entering number (Locations) <br>
+- [[http://docs.openmoko.org/trac/ticket/1635 #1635]] After x hours the call active will become unstable. Can't receive or make a phone call normally. <br>
 
 
 PLEASE CHECK THE BUG TRACK AT FIRST, if you're sure it's a bug that's not in the track, than please use the [http://docs.openmoko.org/trac/ trac] system well to report it, we'll appreciate it.<br>
