--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -28,7 +28,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 ** Starts when GTA03EVB is in office (AUG.11.2008)
 ** voltage, power consumption, RF characteristics (finished by end of AUG.22.2008)
 *** Siemens MC 75i EDGE MODEM 
-*** u-blox 5 Antaris GPS 
+*** u-blox 5 Antaris GPS (Done)
 *** CSR BT
 *** Accton/Atheros AR6001 Wi-Fi module
 *
