*Empty MediaWiki Message*

--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -288,4 +288,4 @@ The new package might not show up in the program menu until you reboot or restar
 {{Languages|Om 2007.2}}
 
 [[Category:Distributions]]
-[[Category:Openmoko2007.2]]
+[[Category:Om  2007.2]]
