/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -93,13 +93,15 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 | [[Buying Interest List]] || Page was originally for [[Neo 1973]] - Too many interested people for [[Neo FreeRunner]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Roadmap]] || Emtpy bascially || [[User:Kempelen|Kempelen]]
+| [[Roadmap]] || Emtpy bascially || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[GUI Frameworks]] || Empty || [[User:Kempelen|Kempelen]]
+| [[GUI Frameworks]] || Empty || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[Group_Order]] || Outdated || [[User:Kempelen|Kempelen]]
+| [[Group_Order]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[P1 Buying Interest List]] || Outdated || [[User:Kempelen|Kempelen]]
+| [[P1 Buying Interest List]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Om 2007.2/de]] || was copied from the english page on 2008-08-05, not translated|| [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Wiki engine issues==
