moving pages here from deleted [[Category:Candidates for speedy deletion]]

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -102,6 +102,18 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[P1 Buying Interest List]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
 | [[Om 2007.2/de]] || was copied from the english page on 2008-08-05, not translated|| [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Automatic emulation in windows xp]] || redirect to page that doesn't exist anymore|| [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Style Sheet]] and [[Talk:Style Sheet]]|| not used anymore|| [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Supported Hardware/es]] || no content || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Tempmain/es]] || is now at [[Main Page/es]] || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Trash]] || || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[外观]] || || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Wiki engine issues==
