Redirecting to [[Glossary#BSC]]

--- a/BSC.mw
+++ b/BSC.mw
@@ -1,5 +1,1 @@
-Base Station Controller
-
-This is a part of the GSM network. It is connected via [[Abis]] interface to the [[BTS]].  Upstream connection is to the [[MSC]].
-
-[[Category:Technical]]
+#REDIRECT [[Glossary#BSC]]
