/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -114,6 +114,10 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[Trash]] || || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 | [[外观]] || || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Finger]] || Funny, but not relevant|| [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[GSM Communication Infrastructure]] || not much information|| [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Wiki engine issues==
