--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -77,7 +77,9 @@ Openmoko Inc.<br />
 地址：台北市內湖區陽光街300號7樓<br />
 Email：chelsea@openmoko.com
 
-== Openmoko 課程計畫 ==
+==Openmoko 學校課程==
+
+想要知道下學期有哪些學校可以上到 Openmoko 手機課程嗎？我們即將為您發佈 Openmoko 開課資訊。
 
 ==Richard Stallman 台灣區演講==
 
