*Empty MediaWiki Message*

--- a/Glossary.mw
+++ b/Glossary.mw
@@ -26,10 +26,10 @@ General Packet Radio Service - see http://en.wikipedia.org/wiki/General_Packet_R
 Global Positioning System - see http://en.wikipedia.org/wiki/Gps
 
 ==GTA01==
-Internal codename of the first phone hardware release, the Neo 1973
+Internal codename of the first phone hardware release, the [[Neo 1973]]
 
 ==GTA02==
-Internal codename of the second phone hardware release, the Neo FreeRunner
+Internal codename of the second phone hardware release, the [[Neo FreeRunner]]
 
 ==MSC==
 Mobile Switching Centre. A major componenent of the GSM Network.
