--- a/Glossary.mw
+++ b/Glossary.mw
@@ -14,7 +14,7 @@ Base Station Controller - This is a part of the GSM network. It is connected via
 Base Transceiver Station - This is the part between the MS and BSC in a GSM network. It is interfaced to the BSC using the Abis protocol. 
 
 ==FBGA==
-FINE ball grid array - see (BGA)
+FINE ball grid array - see ([[Glossary#BGA|BGA]])
 
 ==FPGA==
 Field Programmable Gate Array (not used in v1)  http://en.wikipedia.org/wiki/FPGA
