--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -268,9 +268,9 @@ Openmoko 因為開放源碼的特性，因此很適合教學與研究場合。Op
 
 今天 Openmoko 在成功大學資訊工程學系 4263教室（資工講座）為大家帶來精彩課程。
 
-[[Image:0222-ncku-campus.jpg|200px|thumb|Training at NCKU Campus]]
+[[Image:0222-ncku-campus.jpg|200px|thumb|Left|Training at NCKU Campus]]
 
-[[Image:0222-ncku-campus2.jpg|200px|thumb|Training at NCKU Campus]]
+[[Image:0222-ncku-campus2.jpg|200px|thumb|Left|Training at NCKU Campus]]
 
 ==Openmoko 台灣區校園巡迴記者會-2008/02/14==
 [[Image:0214-digitimes.jpg|200px|thumb|Digitimes Journalist Interview]]
