--- a/Phones.mw
+++ b/Phones.mw
@@ -13,7 +13,9 @@
 
 Openmoko has already developped two different phones, the [[Neo 1973]] (GTA01) and the [[Neo FreeRunner]] (GTA02).
 
-The next phone, GTA03, will be based on the same system-on-a-chip as the Neo FreeRunner (GTA02). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks.
+
+== Future projects ==
+The next phone, GTA03, will be based on the same system-on-a-chip as the Neo FreeRunner (GTA02). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks. 
 
 The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chip.
 
