/* Richard Stallman 台灣區演講 */

--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -83,6 +83,9 @@ Email：chelsea@openmoko.com
 
 ==Richard Stallman 台灣區演講==
 
+[[Image:rms-tw.jpg|200px|thumb|Right|Richard Stallman at Taiwan]]
+[[Image:rms-tw2.jpg|200px|thumb|Right|Richard Stallman w/ Openmoko Team]]
+
 Openmoko 大中華區行銷部安排自由軟體基金會創辦人 Richard Stallman 來台演講。時間如下：
 
 * 台北場：5/14 (Wed.) 於淡江大學，台北。時間：10:00~13:00。
