--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -47,6 +47,8 @@ The device is being sold through multiple channels (including [http://www.openmo
 
 As the hacker's dream toy: it is fully functional. As a GSM phone: some people have been using it to receive and place phone calls and SMS for months, but with currently shipping software the battery life is only one day. As a GPS device: critical bugs have been ironed out and there is nice software to know where you are using OpenStreetMap. As an alarm clock, media player, internet browser, game console, email reader and contacts manager: software is not stable yet.
 
+If you want  fully functional smart phone, then download the [[Qtopia]] distribution. If you want to help OM develop it's end user applications, then download [[Om 2008.8|2008.8]]. It's still "Alpha", which means its not feature complete, but it will give you an idea of the direction we are headed. Read more about these and other [[Distributions|distributions]], then choose for yourself.
+
 Please see the [[FreeRunner: Selected Blogs and Articles]] to get more reviews. The [[Freerunner Hardware Issues]] page may also be of interest.
 
 == Other Frequently Asked Questions ==
