--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -4,7 +4,7 @@
 *'''Student:''' [http://www.valeriovalerio.org Valério Valério]
 *'''Mentor:''' Daniel Willmann
 
-==ReMoko v0.1==
+==ReMoko v0.2==
 
 ===Downloads===
 
@@ -55,8 +55,13 @@ after that you will need to restart the framework (kill the process and start it
 ** Numeric keyboard;
 ** Holding for Capslock, Shift, Control, Alt and Control + Alt;
 ** Mouse area with tapping functionality;
+*'''Settings Profile'''
+** Option to run the app in fullscreen mode or window mode;
+** Option to set the sensitivity of the mouse scroll;
+
 
 ===Known Issus===
+* In some images (last FSO) the keyboard only show up, if the app is in window mode;
 * The 'backslash' key is wrong mapped;
 * In illume keyboard in the FSO milestone 2 have some bug's yet in the default profile and in the numbers profile;
 * Connection problems with Symbian S60 devices with BT-HID keyboard app provided by Nokia;
