--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -15,9 +15,10 @@ This site contains the press coverage about OpenMoko and the Neo 1973 sorted by 
 
 ==== August 2008 ====
 
+* The Register [http://www.theregister.co.uk/2008/08/07/openmoko_opens_schematics/ Openmoko to reveal Linux phone's inner workings]
+* BusinessWire [http://www.smartbrief.com/news/cea/industryBW-detail.jsp?id=892DE460-3982-4B33-80D1-04B1D075BC1C Openmoko Declares Another Freedom: Publishes Schematics for Neo Phones]
 * Manufacturing Businesss Technology [http://www.mbtmag.com/articleXml/LN833223678.html Openmoko Declares Another Freedom: Publishes Schematics for Neo Phones; Openmoko Shows Beauty Is More Than Skin Deep]
 * LinuxDevices.com [http://www.linuxdevices.com/news/NS9423733896.html Open phone hardware vendor frees schematics]
-* Monochrome Mentality [http://monochromementality.com/index.php/blog/show/FSO-Milestone-II-Phot-Safari-and--rant.html FSO Milestone II Photo Safari and rant]
 * New York Times [http://www.nytimes.com/2008/08/04/technology/04open.html?_r=1&ref=technology&oref=slogin Applications Spur Carriers to Relax Grip on Cellphones]
 
 ==== July 2008 ====
