--- a/FreeRunner:_Selected_Blogs_and_Articles.mw
+++ b/FreeRunner:_Selected_Blogs_and_Articles.mw
@@ -12,6 +12,7 @@ Newest on top.
 
 ===August===
 * Andrénalin heavy metal chainsaw!!! [http://andre.web-yard.de/blog/2008/08/03/neo-freerunner-rocks-hard-rides-free/ http://andre.web-yard.de/blog/2008/08/03/neo-freerunner-rocks-hard-rides-free/]
+* Monochrome Mentality [http://monochromementality.com/index.php/blog/show/FSO-Milestone-II-Phot-Safari-and--rant.html FSO Milestone II Photo Safari and rant]
 
 === July 2008 ===
 * technocrat.net (Charles E. Hill) [http://technocrat.net/d/2008/7/27/46753 OpenMoko Neo Freerunner - Part 1]
