--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -10,15 +10,15 @@ Es sind genügend '''Schlafplätze''' während und nach der OpenExpo vorhanden (
 * [http://lug.zhaw.ch/wiki/Distro-Bash_2007 Distro-Bash Winterthur]
 * OpenMoko booth at the OpenExpo'07 Zurich
 
-== NEO FreeRunner (aka GTA02) Group Order ==
 
-[[GroupSales#Switzerland]]
 == Buying OpenMoko FreeRunner in Switzerland ==
+===Group Sales===
+[[GroupSales#Switzerland]]
 
+===Distributors===
 If you are interested in getting an OpenMoko in your post box, drop me a mail at jec at jesc dot ch . I'm making a grouped order for Switzerland people.
 
 Website: http://www.jesc.ch/openmoko
-
 
 == Users in Switzerland ==
 *[[User:C7|C7]]
