--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -5,6 +5,17 @@
 
 Es sind genügend '''Schlafplätze''' während und nach der OpenExpo vorhanden (Pfadiheim Breite). Mehr Infos folgen. Bis dann einfach [[User:C7|Ben]] ankicken. '''Hilfe''' ist übrigens jederzeit mehr als willkommen ;) Vor allem auch am Stand.
 
+==== Wer ist wann am Stand? ====
+Diese Tabelle darf gerne noch ergänzt werden ;) Ich denke 3-4 Leute wären optimal. Dann haben wir auch Zeit zwischendurch was Essen zu gehen.
+
+{| class="wikitable" style="margin: 0em " cellspacing="0" cellpadding="3" border="1"
+! !! Mittwoch 24. !! Donnerstag 25.
+|-
+| Morgen || [[User:C7|Ben]], Andy? || [[User:C7|Ben]], Andy?
+|-
+| Nachmittag || [[User:C7|Ben]], Andy? || [[User:C7|Ben]], Andy?
+|}
+
 == Past Activities ==
 * [http://www.openexpo.ch/openexpo-2008-bern OpenExpo'08 Bern]
 * [http://lug.zhaw.ch/wiki/Distro-Bash_2007 Distro-Bash Winterthur]
