/* Buying OpenMoko FreeRunner in Switzerland */

--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -23,7 +23,7 @@ Diese Tabelle darf gerne noch ergänzt werden ;) Ich denke 3-4 Leute wären opti
 * OpenMoko booth at the OpenExpo'07 Zurich
 
 
-== Buying OpenMoko FreeRunner in Switzerland ==
+== Buying Openmoko Neo FreeRunner in Switzerland ==
 ===Group Sales===
 [[GroupSales#Switzerland]]
 
@@ -31,7 +31,6 @@ Diese Tabelle darf gerne noch ergänzt werden ;) Ich denke 3-4 Leute wären opti
 If you are interested in getting an OpenMoko in your post box, drop me a mail at jec at jesc dot ch . I'm making a grouped order for Switzerland people.
 
 Website: http://www.jesc.ch/openmoko
-
 
 == Users in Switzerland ==
 *[[User:C7|C7]]
