*Empty MediaWiki Message*

--- a/GTA01:Neo_1973.mw
+++ b/GTA01:Neo_1973.mw
@@ -1,6 +1,8 @@
 The [[Neo 1973 hardware|Neo 1973]] is the first phone designed to run [[Openmoko]].
 It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
 This pages contains all GTA01 related topic of wiki. Press the following links , you can easily find the page you want.
+
+Note that the Neo 1973 can not currently run the OM 2008.8 software (the latest release), and that there are no immediate plans to make that happen.  Users should instead purchase a Freerunner if they wish to participate in the Openmoko community.
 {{Gta01}}
 
 [[Category:Neo1973 Hardware]]
