*Empty MediaWiki Message*

--- a/Download.mw
+++ b/Download.mw
@@ -51,6 +51,8 @@ Daily builds: http://buildhost.openmoko.org/daily/freerunner/
 
 === Neo 1973 ===
 
+Note that the images for the 1973 are a hybrid between 2008.8 and 2008.2, and there are no current plans to release the full 2008.8 for the 1973.
+
 Daily builds: http://buildhost.openmoko.org/daily/neo1973/
 
 * Root FS files are like: Openmoko-'''openmoko-qtopia-x11'''-image-glibc-ipk-P1-Snapshot-YYYYMMDD-'''om-gta01.rootfs.tar.gz'''
