*Empty MediaWiki Message*

--- a/Download.mw
+++ b/Download.mw
@@ -40,7 +40,7 @@ For Neo FreeRunner images please scroll down on that link.
 
 == Openmoko 2008.8 images (ASU) ==
 
-Latest stable [[Om 2008.8]] release: http://downloads.openmoko.org/releases/Om2008.8/
+Latest stable [[Om 2008.8]] release: http://downloads.openmoko.org/releases/Om2008.8/ (These images are for the Freerunner only).
 
 === Neo FreeRunner ===
 
