/* Abändern des Beispielprojektes */

--- a/Toolchain%2Fde.mw
+++ b/Toolchain%2Fde.mw
@@ -176,7 +176,7 @@ Möchte man ein eigenes Projekt unter Verwendung der openmoko-sample2 Daten erst
 
  Icon=eigener-projekt-name
 
-* Ins src/ Verzeichnis verschieben
+* Ins src/ Verzeichnis gehen
 
  cd ..
  cd src
