--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -73,6 +73,7 @@ You may install this distribution on the microSD card, in order to [[Boot from s
 = Known Issues =
 '''GSM'''
 
+* [http://docs.openmoko.org/trac/ticket/1766 Cannot make calls or receive SMS messages]
 * [http://docs.openmoko.org/trac/ticket/1662 GSM not working properly after x hours]
 * [https://docs.openmoko.org/trac/ticket/1765 No Pin-Dialog is showing up and so GSM is not usable at all]
 
