--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -1,3 +1,4 @@
+__NOTOC__
 == Upcoming Events ==
 === OpenExpo 2008 ===
 * Booth at the [http://www.openexpo.ch/openexpo-2008-zuerich/ OpenExpo 2008] Winterthur (Zurich) '''24./25. September 2008''' <-- help needed!
