--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -51,8 +51,11 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Wavecom WMP100 || AT docs open, ability to program new AT commands for everyone with a "free"(ly available) SDK. || Order quantity? || Component is fine, but only supports Class10 GPRS unfortunately (Shawn Aug.11.2008)|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=WMP100 wavecom.com] ([http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=downloads&productName=WMP100 sort of])
 |-
-| NA ||NA || NA || NA || NA
+| Audience A1010 || NA || NA || NA || NA
 |-
+| NA || NA || NA || NA || NA
+|-
+
 |}
 
 =Publications=
