*Empty MediaWiki Message*

--- a/Neo_alsamixer.mw
+++ b/Neo_alsamixer.mw
@@ -186,6 +186,28 @@ To run alsamixer through ssh, run
 |-
 | Voice || Playback ||   ||  
 |-
+| Bass || Capture ||   ||  
+|-
+| Treble || Capture ||   ||  
+|-
+| PCM || Capture ||   ||  
+|-
+| Sidetone || Capture ||   ||  
+|-
+| Mic1 || Capture ||   ||  
+|-
+| Mic2 || Capture ||   ||  
+|-
+| Capture || Capture ||   ||  
+|-
+| 3D || Capture ||   ||  
+|-
+| ADC || Capture ||   ||  
+|-
+| ALC Capture Attack Time || Capture ||   ||  
+|-
+| ALC Capture Decay Time || Capture ||   ||  
+|-
 |}
 
 
