*Empty MediaWiki Message*

--- a/Neo_alsamixer.mw
+++ b/Neo_alsamixer.mw
@@ -208,8 +208,25 @@ To run alsamixer through ssh, run
 |-
 | ALC Capture Decay Time || Capture ||   ||  
 |-
+| ALC Capture Hold Time || Capture ||   ||  
+|-
+| ALC Capture Max || Capture ||   ||  
+|-
+| ALC Capture NG Threshold || Capture ||   ||  
+|-
+| ALC Capture Target || Capture ||   ||  
+|-
+| ALC Mixer Line || Capture ||   ||  
+|-
+| ALC Mixer Mic1 || Capture ||   ||  
+|-
+| ALC Mixer Mic2 || Capture ||   ||  
+|-
+| ALC Mixer Rx || Capture ||   ||  
+|-
+| Voice Sidetone || Capture ||   ||  
+|-
 |}
-
 
 
 ===Troubleshooting===
