added STM32F103 and UC864

--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -53,6 +53,10 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Audience A1010 || No, waiting for answer(Aug.12.2008) || NA  || NA || NA
 |-
+| STM32F103 (MPU) || Full documentation appears to be on Web || ? || Looks promising, see [http://lists.openmoko.org/pipermail/hardware/2008-August/000303.html here] for feature wish list. || [http://www.st.com/mcu/inchtml-pages-stm32.html STM32 (CORTEX M3)]
+|-
+| UC864 (3.5G modem) || Detailed documentation on Web || ? || First impression is good || [http://www.telit.com/en/products/umts-hsdpa.php?p_id=14&p_ac=show&p=13 UMTS/HSDPA]
+|-
 | NA || NA || NA || NA || NA
 |-
 
