--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -55,7 +55,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | STM32F103 (MPU) || Full documentation appears to be on Web || ? || Looks promising, see [http://lists.openmoko.org/pipermail/hardware/2008-August/000303.html here] for feature wish list. || [http://www.st.com/mcu/inchtml-pages-stm32.html STM32 (CORTEX M3)]
 |-
-| UC864 (3.5G modem) || Detailed documentation on Web || ? || First impression is good || [http://www.telit.com/en/products/umts-hsdpa.php?p_id=14&p_ac=show&p=13 UMTS/HSDPA]
+| UC864 (3.5G modem) || Detailed documentation on Web || ? || First impression is good (But only support UMTS2100 band) || [http://www.telit.com/en/products/umts-hsdpa.php?p_id=14&p_ac=show&p=13 UMTS/HSDPA]
 |-
 | NA || NA || NA || NA || NA
 |-
