/* ASU Test Report */

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -1,5 +1,5 @@
 __NOTOC__
-= ASU Test Report =
+= Om 2008.8 Test Report =
 If you want to know whether the bug that you find is exist in our bug track, you can check:
 [http://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&group=status&reporter=wendy_hung&reporter=will&reporter=regina_kim&order=id&col=id&col=summary&col=status&col=type&col=priority&col=milestone Custom Query]<br>
 It's all the bugs that the testing team reported, by using all images including our latest release image.
