/* How do I get a qwerty software keyboard? */

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -142,9 +142,19 @@ Ruby 1.8.6 please refer http://blog.wolfman.com/articles/2008/08/10/ruby-1-8-6-o
 
 See [[Switching Keyboards]]
 
-==== How do I get a qwerty software keyboard? ====
+==== How do I get a qwerty software keyboard?====
 
 See [[Switching Keyboards]]
 
+====How to use an external USB or Bluetooth keyboard with ing FreeRunner ? ====
+
+just run:
+ echo "host" > /sys/devices/platform/s3c2410-ohci/usb_mode
+ echo "1" > /sys/devices/platform/neo1973-pm-host.0/hostmode
+
+This'll put the Freerunner in to powered USB host mode, then just plug in the keyboard and it'll work. Personally I've made a .desktop file to switch into and out of host mode. To switch back to unpowered device mode just run:
+
+ echo "device" > /sys/devices/platform/s3c2410-ohci/usb_mode
+ echo "0" > /sys/devices/platform/neo1973-pm-host.0/hostmode
 
 [[Category:GTA02 Hardware]]
