--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -45,7 +45,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 {|border=1 cellspacing=0
 ! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
 |-
-||SIMCOM5210V  || All docs not open, even AT commands. Requested answer from SIMCOMM Aug 8. || Teenie says it's OK. || Good (Shawn Aug.7.2008)||NA
+||SIMCOM5210V  || All docs can be opened under the letter of authorization Aug 8.13 || Teenie says it's OK. || Good (Shawn Aug.7.2008)||NA
 |-
 | WiFi and BT Combo Module (AR6002+BC6) ||Not Checked || Not Checked || Good (Shawn Aug.7.2008)||NA
 |-
