--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -111,6 +111,9 @@ This should solve most off your moko side networking issues. If you need any oth
 * The Pin-Dialog by default just shows letters. You have to slide your finger up/down over the keyboard to make the numbers/uppercase/special characters appear.
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Sollution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
 
+== Updates ==
+
+There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
 
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
