--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -59,6 +59,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | NA || NA || NA || NA || NA
 |-
+| Freescale i.MX Products (AP) || Full documentation appears to be on Web || ? || Looks good || [http://www.freescale.com/files/32bit/doc/data_sheet/MCIMX31C.pdf?fsrch=1&WT_TYPE=Data%20Sheets&WT_VENDOR=FREESCALE&WT_FILE_FORMAT=pdf&WT_ASSET=Documentation i.MX]
+|-
 
 |}
 
