*Empty MediaWiki Message*

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -11,7 +11,7 @@ __NOTOC__
 
 [[Charging Test Cases]]
 
-== ASU Test Cases ==
+== Om 2008.8 Test Cases ==
 
 
 [http://people.openmoko.org/testing/software/Testcases/version6/ASU_Qtopia_Dialer_v6.xls Qtopia Dialer Test Cases]<br>
@@ -65,6 +65,9 @@ If you want to ask some question, you can send a mail to our [http://lists.openm
 |-
 |(the problem you found but not sure if ti is a bug) || Om2008.8 || (which image that you use) || (wendy_hung@openmoko.com) 
 |}
+
+<br>
+<br>
 
 = Hardware =
 [[GSM 900 RF Test Cases]]<br>
