/* If you are not sure it is a bug or not, please leave a message below: */

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -63,7 +63,7 @@ If you want to ask some question, you can send a mail to our [http://lists.openm
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="3" border="1" 
 ! Short Description !! Milestone !! Image !! your name/email
 |-
-|(the problem you found but not sure if ti is a bug) || Om2008.8 || (which image that you use) || (wendy_hung@openmoko.com) 
+|(the problem you found but not sure if it is a bug) || Om2008.8 || (which image that you use) || (wendy_hung@openmoko.com) 
 |}
 
 <br>
