--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -1,6 +1,6 @@
 __NOTOC__
 = Software =
-== Neo FreeRunner ==
+== Neo FreeRunner Test Cases ==
 [[U-Boot Test Cases]]<br>
 
 [[Dialer Test Cases]]<br>
