--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -7,6 +7,14 @@ Search for this files in source tree and you can edit them.
 == Translating ==
 Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
 
+
+{| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="5" border="1"
+! Page Name !!Translation Status !! Language Versions !!Maintainer!!Status
+|-
+| Getting Started with your Neo FreeRunner ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+
+|}
+
 == Software ==
 There are specialised tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ...
 
