*Empty MediaWiki Message*

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -13,7 +13,6 @@ __NOTOC__
 
 == Om 2008.8 Test Cases ==
 
-
 [http://people.openmoko.org/testing/software/Testcases/version6/ASU_Qtopia_Dialer_v6.xls Qtopia Dialer Test Cases]<br>
 
 [http://people.openmoko.org/testing/software/Testcases/version6/ASU_Qtopia_Messages_v6.xls Qtopia Messages Test Cases]<br>
@@ -32,9 +31,7 @@ __NOTOC__
 
 [http://people.openmoko.org/testing/software/Testcases/version6/ASU_Systemsoftware_Charging_v6.xls Systemsoftware(Charging) Test Cases]<br>
 
-[http://people.openmoko.org/testing/software/Testcases/version6/ASU_E%20illume_Launcher_v6.xls E illume(Launcher) Test Cases]<br>
-
-
+[http://people.openmoko.org/testing/software/Testcases/version6/ASU_E%20illume_Launcher_v6.xls E illume(Launcher) Test Cases]
 
 == Om 2008.8 Test Report ==
 If you want to know whether the bug that you find is exist in our bug track, you can check:
