--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -42,7 +42,7 @@ It's all the bugs that the testing team reported, by using all images including 
 '''
 
 Here are some major bugs that been found before Om 2008.8 release, <br>
-- [[http://docs.openmoko.org/trac/ticket/1760 #1760]][ Out going call can not really disconnect by "End Call" if the other one did not pick up the call.<br>
+- [[http://docs.openmoko.org/trac/ticket/1760 #1760]] Out going call can not really disconnect by "End Call" if the other one did not pick up the call.<br>
 - Some of the testing phone can not make phone calls but can receive/send SMS??? (With alert message"no network")<br>
 - [[http://docs.openmoko.org/trac/ticket/1691 #1691]] qpe crashed all the time in one of our testing phone.<br>
 - Two of our phone can not wake up from suspend time, and we're still tracking it.<br>
