--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -81,6 +81,13 @@ Email：chelsea@openmoko.com
 
 想要知道下學期有哪些學校可以上到 Openmoko 手機課程嗎？我們即將為您發佈 Openmoko 開課資訊。
 
+==清大資工參訪日==
+
+[[Image:nthu-visit.1.jpg|200px|thumb|Right|NTHU Visit Day at Openmoko Taipei]]
+[[Image:nthu-visit.2.jpg|200px|thumb|Right|NTHU Visit Day at Openmoko Taipei]]
+
+清華大學資工系使用 Openmoko/Neo 做為專題實作平臺，大中華區行銷部特別為清大的同學安排一天的「Openmoko 交流活動」。當天超過 50 位同學來到 Openmoko 總部與我們的工研師進行交流。
+
 ==Richard Stallman 台灣區演講==
 
 [[Image:rms-tw.jpg|200px|thumb|Right|Richard Stallman at Taiwan]]
