/* 清大資工參訪日 */

--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -81,7 +81,7 @@ Email：chelsea@openmoko.com
 
 想要知道下學期有哪些學校可以上到 Openmoko 手機課程嗎？我們即將為您發佈 Openmoko 開課資訊。
 
-==清大資工參訪日==
+==清大資工參訪日-2008/04/01==
 
 [[Image:nthu-visit.1.jpg|200px|thumb|Right|NTHU Visit Day at Openmoko Taipei]]
 [[Image:nthu-visit.2.jpg|200px|thumb|Right|NTHU Visit Day at Openmoko Taipei]]
