--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -47,7 +47,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 ||SIMCOM5210  || All docs can be opened under the letter of authorization Aug 8.13 || Teenie says it's OK. || Good (Shawn Aug.7.2008)||[http://www.sim.com/productssolutions/wirelessmodule/sim5210.htm]
 |-
-| WiFi and BT Combo Module (AR6002+BC6) ||Not Checked || Not Checked || Good (Shawn Aug.7.2008)||NA
+| WiFi and BT Combo Module (AR6002+BC6) ||Not Checked || Not Checked || Good (Shawn Aug.7.2008)||[http://www.atheros.com/pt/bulletins/AR6002Bulletin.pdf]WIFI[http://www.csrsupport.com/download/10151/BC6AudioROMIssue4.pdf]Bluetooth
 |-
 | Wavecom WMP100 || AT docs open, ability to program new AT commands for everyone with a "free"(ly available) SDK. || Order quantity? || Component is fine, but only supports Class10 GPRS unfortunately (Shawn Aug.11.2008)|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=WMP100 wavecom.com] ([http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=downloads&productName=WMP100 sort of])
 |-
