--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -11,7 +11,7 @@ Rule of thumb: It's better to have some translation than nothing, so feel free t
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="5" border="1"
 ! Page Name  !! Language Versions !!Maintainer!!Status
 |-
-| Getting Started with your Neo FreeRunner ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+| [[Getting Started with your Neo FreeRunner]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
 
 |}
 
