--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -55,7 +55,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | STM32F103 (MPU) || Full documentation appears to be on Web || ? || Looks promising, see [http://lists.openmoko.org/pipermail/hardware/2008-August/000303.html here] for feature wish list. || [http://www.st.com/mcu/inchtml-pages-stm32.html STM32 (CORTEX M3)]
 |-
-| UC864 (3.5G modem) || Detailed documentation on Web || ? || First impression is good || [http://www.telit.com/en/products/umts-hsdpa.php?p_id=14&p_ac=show&p=13 UMTS/HSDPA]
+| UC864 (3.5G modem) || Detailed documentation on Web. Can get even for more documentation from reseller. || Any Qty is good. Price depends strongly on the qty. || First impression is good || [http://www.telit.com/en/products/umts-hsdpa.php?p_id=14&p_ac=show&p=13 UMTS/HSDPA]
 |-
 | Freescale i.MX Products (AP) || Full documentation appears to be on Web || ? || Looks good || [http://www.freescale.com/files/32bit/doc/data_sheet/MCIMX31C.pdf?fsrch=1&WT_TYPE=Data%20Sheets&WT_VENDOR=FREESCALE&WT_FILE_FORMAT=pdf&WT_ASSET=Documentation i.MX]
 |-
