--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -12,8 +12,12 @@ Rule of thumb: It's better to have some translation than nothing, so feel free t
 ! Page Name  !! Language Versions !!Maintainer!!Status
 |-
 | [[Getting Started with your Neo FreeRunner]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
-
+|-
+| [[Neo FreeRunner GTA02 Hardware]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Booting from SD]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
 |}
+Neo FreeRunner GTA02 Hardware
 
 == Software ==
 There are specialised tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ...
