--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -51,6 +51,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Wavecom WMP100 || AT docs open, ability to program new AT commands for everyone with a "free"(ly available) SDK. || Order quantity? || Component is fine, but only supports Class10 GPRS unfortunately (Shawn Aug.11.2008)|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=WMP100 wavecom.com] ([http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=downloads&productName=WMP100 sort of])
 |-
+| Wavecom Q26 Ultra|| same as wmp100 || Order quantity? || GPRS cl10, EDGE cl10, WCDMA, but thick (40x32x6.55mm)|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=Q26_Ultra wavecom's website]
+|-
 | Audience A1010 || No, waiting for answer(Aug.12.2008) || NA  || NA || NA
 |-
 | STM32F103 (MPU) || Full documentation appears to be on Web || ? || Looks promising, see [http://lists.openmoko.org/pipermail/hardware/2008-August/000303.html here] for feature wish list. || [http://www.st.com/mcu/inchtml-pages-stm32.html STM32 (CORTEX M3)]
