--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -16,8 +16,13 @@ Rule of thumb: It's better to have some translation than nothing, so feel free t
 | [[Neo FreeRunner GTA02 Hardware]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
 |-
 | [[Booting from SD]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Toolchain]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Distributions]] ||none || none ||todo
+|-
+| [[Om2008.8]] ||none || none ||todo
 |}
-Neo FreeRunner GTA02 Hardware
 
 == Software ==
 There are specialised tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ...
