/* Finding what to translate */

--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -1,8 +1,23 @@
 Main page for localisation is [[Translation]]
 help to improve this page
 == Finding what to translate ==
-First of all package creator/maintainer have to create *.pot file with all messages included.
-Search for this files in source tree and you can edit them.
+If you are not sure what page is most popular and wait for translation. Please refer to the following list, these pages are most popular, and its content is stable .
+
+{| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="5" border="1"
+! Page Name  !! Language Versions !!Maintainer!!Status
+|-
+| [[Getting Started with your Neo FreeRunner]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Neo FreeRunner GTA02 Hardware]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Booting from SD]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Toolchain]] ||Tranditional Chinese || {{user|coolcat|Brenda Wang}} ||Finished
+|-
+| [[Distributions]] ||none || none ||todo
+|-
+| [[Om2008.8]] ||none || none ||todo
+|}
 
 == Translating ==
 Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
