--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -3,6 +3,8 @@ help to improve this page
 == Finding what to translate ==
 If you are not sure what page is most popular and wait for translation. Please refer to the following list, these pages are most popular, and its content is stable .
 
+Plaese start at these pages. Or you can add the page you want 
+
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="5" border="1"
 ! Page Name  !! Language Versions !!Maintainer!!Status
 |-
@@ -18,7 +20,6 @@ If you are not sure what page is most popular and wait for translation. Please r
 |-
 | [[Om2008.8]] ||none || none ||todo
 |}
-
 
 == Translating ==
 Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
