/* Finding what to translate */

--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -3,7 +3,7 @@ help to improve this page
 == Finding what to translate ==
 If you are not sure what page is most popular and wait for translation. Please refer to the following list, these pages are most popular, and its content is stable .
 
-Plaese start at these pages. Or you can add the page you want 
+Plaese start at these pages. Or you can add the page you think is important.
 
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="5" border="1"
 ! Page Name  !! Language Versions !!Maintainer!!Status
