--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -38,7 +38,7 @@ Most of text editors will fit also: vim, emacs, ed ...
 == Common space for localisation effort ==
 '''please join the community ml for now.''' there's also some talking about creating a translators ml [[Talk:Translation#Need for translation mailing list (and coordinators?)|here]] [http://lists.openmoko.org/pipermail/community/2007-April/004973.html and here: OM-i18n-ml] feel free to join both discussions. [[User:Cga|cga]] sat apr 28th 20:48:35 CEST 2007)
 
-== List of OpenMoko related PO's==
+== List of Openmoko related PO's==
 Most of apps in /home/moko/sources/svn/ and /home/moko/openmoko/trunk/src/target/OM-2007/applications/ don have *.pot files for now, but some of them have *.po files for some of the languages
 
 {{Languages|Translation_HOWTO}}
