/* Finding what to translate */

--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -1,7 +1,7 @@
 Main page for localisation is [[Translation]]
 help to improve this page
 == Finding what to translate ==
-If you are not sure what page is most popular and wait for translation. Please refer to the following list, these pages are most popular, and its content is stable .
+If you are not sure what page is most popular and reday for translation. Please refer to following list.
 
 Plaese start at these pages. Or you can add the page you think is important.
 
@@ -20,7 +20,6 @@ Plaese start at these pages. Or you can add the page you think is important.
 |-
 | [[Om2008.8]] ||none || none ||todo
 |}
-
 
 == Translating ==
 Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
