--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -61,7 +61,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Freescale i.MX Products (AP) || Full documentation appears to be on Web || ? || Looks good || [http://www.freescale.com/files/32bit/doc/data_sheet/MCIMX31C.pdf?fsrch=1&WT_TYPE=Data%20Sheets&WT_VENDOR=FREESCALE&WT_FILE_FORMAT=pdf&WT_ASSET=Documentation i.MX]
 |-
-| TI Wilink series || NA || NA || NA || NA
+| TI Wilink series (WLAN & BT coexistence) || NA || NA || NA || NA
 |-
 |-
 | NA || NA || NA || NA || NA
