*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_London.mw
+++ b/Openmoko_Local_Groups:_London.mw
@@ -97,6 +97,12 @@ Beer and Neo anyone?
 |User (can compile, maybe port)
 |Oxford
 |Freerunner
+|-
+|[[User:gnublade|Andy Kilner]]
+|Python, C, GTK+
+|User, Developer 
+|London
+|Freerunner
 |}
 
 
