--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -64,6 +64,9 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 | TI Wilink series (WLAN & BT coexistence) || NA || NA || NA || NA
 |-
 |-
+| TI BluLink series (BT) || NA || NA || NA || NA
+|-
+|-
 | NA || NA || NA || NA || NA
 |-
 |}
